Sutter Health/src/objects/S3_Workshop__c.object
<CustomObject>
    <description>Track process improvement workshops at S3</description>
    <fields>
        <fullName>Actual_ROI__c</fullName>
        <label>Actual ROI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VSM</fullName>
                </value>
                <value>
                    <fullName>Kaizen</fullName>
                </value>
                <value>
                    <fullName>RIE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Champion_Hansei__c</fullName>
        <label>Champion Hansei</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <inlineHelpText>When is the workshop marked as closed/completed?</inlineHelpText>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_to_Completion__c</fullName>
        <formula>If(IsNull(  Completion_Date__c  ), 

CASE(MOD( ( Workshop_End_Date__c ) - DATE(1985,6,24),7), 0 , 
CASE( MOD( Today() - (Workshop_End_Date__c ) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 1 , 
CASE( MOD( Today() - (Workshop_End_Date__c ) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 2 , 
CASE( MOD( Today() - (Workshop_End_Date__c ) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 3 , 
CASE( MOD( Today() - (Workshop_End_Date__c ) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 4 , 
CASE( MOD( Today() - (Workshop_End_Date__c ) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 5 , 
CASE( MOD( Today() - (Workshop_End_Date__c ) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 6 , 
CASE( MOD( Today() - (Workshop_End_Date__c ) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 999) 
+ (FLOOR(( Today() - (Workshop_End_Date__c ) )/7)*5-1),

CASE(MOD( (Workshop_End_Date__c ) - DATE(1985,6,24),7), 0 , 
CASE( MOD( ( Completion_Date__c  ) - (Workshop_End_Date__c ) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 1 , 
CASE( MOD( (Completion_Date__c ) - (Workshop_End_Date__c ) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 2 , 
CASE( MOD( (Completion_Date__c ) - (Workshop_End_Date__c ) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 3 , 
CASE( MOD( (Completion_Date__c ) - (Workshop_End_Date__c ) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 4 , 
CASE( MOD( (Completion_Date__c ) - (Workshop_End_Date__c ) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 5 , 
CASE( MOD( (Completion_Date__c ) - (Workshop_End_Date__c ) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 6 , 
CASE( MOD( (Completion_Date__c ) - (Workshop_End_Date__c ) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 999) 
+ (FLOOR(( (Completion_Date__c ) - (Workshop_End_Date__c ) )/7)*5-1))</formula>
        <inlineHelpText>How long has the workshop been in-rpogress? (Today - workshop end date)</inlineHelpText>
        <label>Days to Completion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecasted_ROI__c</fullName>
        <label>Forecasted ROI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Function_PM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Function PM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>S3_Workshops_FPM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact Center</fullName>
                </value>
                <value>
                    <fullName>Credentialing Verification</fullName>
                </value>
                <value>
                    <fullName>Document Management Center</fullName>
                </value>
                <value>
                    <fullName>eQuip</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Revenue Cycle</fullName>
                </value>
                <value>
                    <fullName>Service and Performance Management</fullName>
                </value>
                <value>
                    <fullName>Supply Chain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Methodology__c</fullName>
        <inlineHelpText>Is there a specific methodology applied in this workshop?</inlineHelpText>
        <label>Methodology</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5S</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_VSM_Workshop__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent VSM Workshop</label>
        <referenceTo>S3_Workshop__c</referenceTo>
        <relationshipLabel>S3 Workshops</relationshipLabel>
        <relationshipName>S3_Workshops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participants__c</fullName>
        <inlineHelpText>1 line per participant</inlineHelpText>
        <label>Participants</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program_Feedback__c</fullName>
        <label>Program Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>S3_Operations_Strategy__c</fullName>
        <inlineHelpText>Which strategy, operational metric or approved project does this workshop align with?</inlineHelpText>
        <label>Operations/Strategy</label>
        <referenceTo>S3_Ops__c</referenceTo>
        <relationshipLabel>S3 Workshops</relationshipLabel>
        <relationshipName>S3_Workshops</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SPM_Notes__c</fullName>
        <label>SPM Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SPM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who on the SPM team is monitoring this workshop</inlineHelpText>
        <label>SPM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>S3_Workshops_PM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who is sponsoring this workshop?</inlineHelpText>
        <label>Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>S3_Workshops_Sponsor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>What is the status of this workshop currently?</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Proposed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subfunction__c</fullName>
        <label>Subfunction</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Function__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting - Accounts Receivable &amp; Managed Care</fullName>
                </value>
                <value>
                    <fullName>Accounting - General Ledger</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable</fullName>
                </value>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>Central Business Office (CBO)</fullName>
                </value>
                <value>
                    <fullName>Charge Capture and CDM</fullName>
                </value>
                <value>
                    <fullName>Coding Optimization</fullName>
                </value>
                <value>
                    <fullName>Compensation</fullName>
                </value>
                <value>
                    <fullName>Content Management</fullName>
                </value>
                <value>
                    <fullName>Contract Management</fullName>
                </value>
                <value>
                    <fullName>Data, Applications, Reporting &amp; Audit</fullName>
                </value>
                <value>
                    <fullName>Data and Analytics Support</fullName>
                </value>
                <value>
                    <fullName>Distribution and Fulfillment</fullName>
                </value>
                <value>
                    <fullName>eLearning</fullName>
                </value>
                <value>
                    <fullName>Health Information Management (HIM)</fullName>
                </value>
                <value>
                    <fullName>HR Data and Reporting</fullName>
                </value>
                <value>
                    <fullName>HRIS</fullName>
                </value>
                <value>
                    <fullName>Operations and Decision Support</fullName>
                </value>
                <value>
                    <fullName>Patient Access Services (PAS)</fullName>
                </value>
                <value>
                    <fullName>Payroll</fullName>
                </value>
                <value>
                    <fullName>Procure to Pay</fullName>
                </value>
                <value>
                    <fullName>Recruitment</fullName>
                </value>
                <value>
                    <fullName>Strategic Sourcing</fullName>
                </value>
                <value>
                    <fullName>Workforce and Labor Relations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>S3_Workshops_TL</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lean</fullName>
                </value>
                <value>
                    <fullName>Strategy</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validated_ROI__c</fullName>
        <label>Validated ROI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Workshop_Days__c</fullName>
        <formula>If(IsNull( Workshop_End_Date__c ), 

CASE(MOD( ( Workshop_Start_Date__c ) - DATE(1985,6,24),7), 0 , 
CASE( MOD( Today() - (Workshop_Start_Date__c ) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 1 , 
CASE( MOD( Today() - (Workshop_Start_Date__c ) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 2 , 
CASE( MOD( Today() - (Workshop_Start_Date__c ) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 3 , 
CASE( MOD( Today() - (Workshop_Start_Date__c ) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 4 , 
CASE( MOD( Today() - (Workshop_Start_Date__c ) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 5 , 
CASE( MOD( Today() - (Workshop_Start_Date__c ) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 6 , 
CASE( MOD( Today() - (Workshop_Start_Date__c ) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 999) 
+ (FLOOR(( Today() - (Workshop_Start_Date__c ) )/7)*5-1), 

CASE(MOD( (Workshop_Start_Date__c ) - DATE(1985,6,24),7), 0 , 
CASE( MOD( ( Workshop_End_Date__c ) - (Workshop_Start_Date__c ) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 1 , 
CASE( MOD( (Workshop_End_Date__c) - (Workshop_Start_Date__c ) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 2 , 
CASE( MOD( (Workshop_End_Date__c) - (Workshop_Start_Date__c ) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 3 , 
CASE( MOD( (Workshop_End_Date__c) - (Workshop_Start_Date__c ) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 4 , 
CASE( MOD( (Workshop_End_Date__c) - (Workshop_Start_Date__c ) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 5 , 
CASE( MOD( (Workshop_End_Date__c) - (Workshop_Start_Date__c ) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 6 , 
CASE( MOD( (Workshop_End_Date__c) - (Workshop_Start_Date__c ) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 999) 
+ (FLOOR(( (Workshop_End_Date__c) - (Workshop_Start_Date__c ) )/7)*5-1))</formula>
        <inlineHelpText>How long was the workshop?</inlineHelpText>
        <label>Workshop Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Workshop_End_Date__c</fullName>
        <inlineHelpText>What is the date the workshop ended?</inlineHelpText>
        <label>Workshop End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Workshop_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workshop Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>S3_Workshops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Workshop_Name__c</fullName>
        <label>Workshop Name</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Workshop_Stage__c</fullName>
        <inlineHelpText>Where in the timeline are we with this workshop?</inlineHelpText>
        <label>Workshop Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Proposed</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Follow-up</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Workshop_Start_Date__c</fullName>
        <inlineHelpText>What is the first date of the workshop?</inlineHelpText>
        <label>Workshop Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Workshop_URL__c</fullName>
        <label>Workshop URL</label>
        <type>Url</type>
    </fields>
    <label>S3 Workshop</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SPM__c</columns>
        <columns>Category__c</columns>
        <columns>Function__c</columns>
        <columns>Parent_VSM_Workshop__c</columns>
        <columns>Workshop_Name__c</columns>
        <columns>Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>HR_Workshops</fullName>
        <columns>NAME</columns>
        <columns>Workshop_Name__c</columns>
        <columns>Type__c</columns>
        <columns>Function__c</columns>
        <columns>Category__c</columns>
        <columns>Parent_VSM_Workshop__c</columns>
        <columns>Workshop_Lead__c</columns>
        <columns>Team_Lead__c</columns>
        <columns>Workshop_Start_Date__c</columns>
        <columns>Function_PM__c</columns>
        <columns>Subfunction__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Function__c</field>
            <operation>equals</operation>
            <value>Human Resources</value>
        </filters>
        <label>HR Workshops</label>
    </listViews>
    <listViews>
        <fullName>This_Month</fullName>
        <columns>NAME</columns>
        <columns>Workshop_Start_Date__c</columns>
        <columns>Workshop_Name__c</columns>
        <columns>Type__c</columns>
        <columns>Function__c</columns>
        <columns>Parent_VSM_Workshop__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Workshop_Start_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>2/1/2016</value>
        </filters>
        <label>This Month</label>
    </listViews>
    <listViews>
        <fullName>Without_Workshop_Leads</fullName>
        <columns>NAME</columns>
        <columns>Workshop_Start_Date__c</columns>
        <columns>Category__c</columns>
        <columns>Workshop_Name__c</columns>
        <columns>Type__c</columns>
        <columns>Parent_VSM_Workshop__c</columns>
        <columns>Function__c</columns>
        <filterScope>Everything</filterScope>
        <label>Without Workshop Leads</label>
    </listViews>
    <nameField>
        <displayFormat>S3W{00000}</displayFormat>
        <label>S3 Workshop Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>S3 Workshops</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>